# behavioral-veriloga-eval

./: .gitignore  ADFGI_UNIFIED_PROTOCOL.md  AGENTS.md  CLAUDE.md  PROJECT_STATUS.md  README.md  README_TASK_REPORT.md  WORK_TODO.md  pyproject.toml
benchmark-balanced/: README.md  common_checker.py  manifest.json
benchmark-v2/: EXPANSION_REPORT.md  README.md  common_checker.py  run_gold_v2.py
docs/: ADC_SYSTEM_DECOMPOSITION.md  BEHAVIOR_CONTRACT_TEMPLATES.md  CIRCUIT_MECHANISM_SKELETONS.json  CLOSEDSET92_COMPLETION_LEDGER.json  CLOSEDSET_CIRCUIT_TEMPLATES.json  COMPILE_SKILL_CATALOG.md  COMPILE_SKILL_PIPELINE.md  COMPLETION_PACKAGE_MANIFEST.json  CONTRACT_REPAIR_CARDS.json  CONTRACT_REPAIR_CARDS_B_ADC_DAC_DRAFT.json  CONTRACT_REPAIR_CARDS_CODEX_SYSTEM_ONLY.json  CONTRACT_REPAIR_CARDS_FULL_PROVENANCE.json  CONTRACT_REPAIR_CARDS_HISTORY_ONLY.json  EXPERIMENT_ASSET_POLICY.md  FAILURE_ATTRIBUTION_POLICY.md  LEGO_MECHANISM_SKILLS.json  LEGO_SKILL_BASED_RAG.md  MIMO_FULL_RUN_PLAN.md  PROMPT_CHECKER_SPECS_ADOPTED.json  PROMPT_CHECKER_SPEC_INFERENCE.md  PROMPT_CHECKER_SPEC_VALIDATION_SET.json  PROMPT_TOKEN_OPTIMIZATION_RESEARCH.md  SPECTRE_COMPATIBILITY_TEMPLATES.json  SYSTEM_CONTRACT_GRAPHS.json  TASK_AUTHORING_CHECKLIST.md  VERIFIED_ARTIFACT_STORE.json
examples/: README.md  manifest.json
generated-completion-package-benchmark-v2-2026-04-29-r1/: completion_package_manifest.json
generated-condition-F-strictv3-evasloop-kimi-full92-materialized-2026-04-28-rerun/: overlay_manifest.json
generated-r26-dwa-pfd-combined-admission-2026-04-27/: overlay_manifest.json  (+1 more)
(+3553 files in other folders)
